--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
     <header class="hero" id="home">
         <div class="hero-content">
             <!-- IMAGE PLACEHOLDER: Replace with your profile picture -->
-            <img src="YOUR_PROFILE_PICTURE.jpg" alt="Lim Sean Shen" class="profile-pic">
+            <img src="profile.jpg" alt="Lim Sean Shen" class="profile-pic">
 
             <h1>Lim Sean Shen</h1>
             <p class="tagline">Data Scientist | Data Analyst | AI Engineer Intern</p>
@@ -461,7 +461,7 @@
                         <h3>Tunku Abdul Rahman University of Management and Technology (TARUMT)</h3>
                         <p class="degree">Bachelor in Data Science (Honours)</p>
                         <p class="details">Kuala Lumpur | Nov 2022 – Present (Expected Graduation: January 2026)</p>
-                        <p class="details">Current CGPA: 3.6197 / 4.00</p>
+                        <p class="details">Current CGPA: 3.7134 / 4.00</p>
                         <p class="details"><strong>Relevant Courses:</strong> Machine Learning, Database Management, Data Warehousing, Artificial Intelligence, Statistics in Data Science, Big Data Technologies.</p>
                         <p class="achievements"><strong>Achievements:</strong> Dean's List (Year 1, Semester 3), President's List (Year 1, Semester 2)</p>
                     </div>
