--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
                     </p>
                     <h1>Hello, I'm Lim Sean Shen</h1>
                     <p>A final-year Bachelor of Data Science student with practical R&D experience and a passion for business analytics. I am actively seeking Master's Degree offerings, full-time roles, and industry collaborations.</p>
-                    <a href="Resume_LimSeanShen.pdf" target="_blank" class="btn btn-primary">View My Resume</a>
+                    <a href="CV Version 2.pdf" target="_blank" class="btn btn-primary">View My Resume</a>
                 </div>
                 <div class="hero-image fade-in-element">
                     <img src="profile.jpg" alt="Lim Sean Shen">
