--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
                     </p>
                     <h1>Hello, I'm Lim Sean Shen</h1>
                     <p>A final-year Bachelor of Data Science student with practical R&D experience and a passion for business analytics. I am actively seeking Master's Degree offerings, full-time roles, and industry collaborations.</p>
-                    <a href="Resume_LimSeanShen.pdf" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem;">
+                    <a href="CV Version 3.pdf" target="_blank" class="btn btn-primary" style="margin-top: 1.5rem;">
                         <i class="fas fa-file-lines" style="margin-right: 0.75rem;"></i>
                         View My Resume
                     </a>
