--- a/index.html
+++ b/index.html
@@ -616,7 +616,7 @@
                             <div class="info-body">
                                 <ul class="no-bullets">
                                     <li>Managed an internal project to develop an automation system for project tracking and management.</li>
-                                    <li>Managed a governmental-affiliated R&D project to develop an automation system for analysing trending topics and performing sentiment analysis.</li>
+                                    <li>Managed a government-affiliated R&D project to develop an automation system for analysing trending topics and performing sentiment analysis.</li>
                                 </ul>
                             </div>
                         </div>
